--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "opencv-python-headless>=4.8.0",
     "optimum>=1.26.1",
     "optimum-quanto>=0.2.7",
+    "peft>=0.15.2",
     "pillow>=10.0.0",
     "protobuf==4.25.3",
     "sam2>=1.1.0",
